# ChainMind-

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
chainmind/: __init__.py
chainmind/a2a/: __init__.py  protocol.py
chainmind/agents/: __init__.py  base_agent.py  orchestrator.py  specialists.py
chainmind/api/: __init__.py  app.py
chainmind/api/middleware/: __init__.py
chainmind/api/routes/: __init__.py
chainmind/api/schemas/: __init__.py  requests.py
chainmind/config/: __init__.py  constants.py  settings.py
chainmind/core/: __init__.py  exceptions.py  interfaces.py  types.py
chainmind/grpc_service/: __init__.py  client.py  server.py
chainmind/grpc_service/protos/: agent_service.proto
chainmind/guardrails/: __init__.py  action_guard.py  input_guard.py  output_guard.py  rate_limiter.py
chainmind/llm/: __init__.py  base_provider.py  circuit_breaker.py  gemini_provider.py  ollama_provider.py  openai_provider.py  router.py
chainmind/mcp/: __init__.py  analytics_server.py  base_server.py  knowledge_base_server.py  supply_chain_server.py
chainmind/memory/: __init__.py  long_term.py  manager.py  short_term.py
chainmind/observability/: __init__.py  health.py  logger.py  metrics.py  tracer.py
chainmind/retrieval/: __init__.py  bm25_retriever.py  dense_retriever.py  hybrid_retriever.py  knowledge_base.py
data/: sample_queries.json
deploy/docker/: Dockerfile  docker-compose.yml
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  service.yaml
scripts/: seed_knowledge_base.py
tests/evals/: test_eval_retrieval.py
tests/integration/: test_mcp_tools.py
tests/unit/: test_a2a_protocol.py  test_circuit_breaker.py  test_guardrails.py  test_hybrid_retriever.py  test_llm_router.py
