[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chainmind"
version = "0.1.0"
description = "Production-grade multi-agent supply chain AI platform with MCP, A2A, gRPC, and hybrid RAG"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ChainMind Team"}
]

dependencies = [
    # --- LLM Providers ---
    "google-generativeai>=0.8.0",
    "openai>=1.40.0",
    "httpx>=0.27.0",           # Ollama HTTP + general async HTTP

    # --- FastAPI & Web ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # --- gRPC ---
    "grpcio>=1.66.0",
    "grpcio-tools>=1.66.0",
    "grpcio-health-checking>=1.66.0",
    "grpcio-reflection>=1.66.0",

    # --- Retrieval & RAG ---
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",

    # --- Memory & Storage ---
    "aiosqlite>=0.20.0",

    # --- Observability ---
    "structlog>=24.4.0",

    # --- Utilities ---
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",         # Retry logic
    "aiofiles>=24.1.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",

]
splade = [
    "transformers>=4.44.0",
    "torch>=2.4.0",
]

[tool.setuptools.packages.find]
include = ["chainmind*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "eval: Evaluation tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
